--- a/roles/navigation/tasks/main.yml
+++ b/roles/navigation/tasks/main.yml
@@ -27,6 +27,6 @@
       - opencpn-plugin-o_charts
       - opencpn-plugin-climatology
       # - opencpn-plugin-route
-      - opencpn-plugin-weatherfax
+      # - opencpn-plugin-weatherfax
       - opencpn-plugin-weatherrouting
     state: present
