--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -1,41 +1,7 @@
 
-- name: Install i3 and things it needs
-  kewlfft.aur.aur:
-    use: yay
-    name:
-      - i3-wm
-      - i3-gnome
-      - acpi
-      - bc
-      - calcurse
-      - conky
-      - dunst
-      - feh
-      - flameshot
-      - i3blocks
-      - i3status
-      - kitty
-      - lightdm
-      - lightdm-gtk-greeter
-      - numlockx
-      - openvpn
-      - picom
-      - rofi
-      - rofi-emoji
-      - sysstat
-      - xclip
-      - xdotool
-      - xorg-apps
-      - xorg-server
-      - xorg-xinit
-      - xsel
-
-
-- name: Automatic monitor activation on laptop docking and the like
-  copy:
-    dest: "/etc/udev/rules.d/carbs-screens.conf"
-    content: |
-      KERNEL=="card0", ACTION=="change", SUBSYSTEM=="drm", ENV{DISPLAY}=":0", ENV{XAUTHORITY}="/home/{{carbs_user}}/.Xauthority", RUN+="/home/{{carbs_user}}/.local/bin/hotplug_monitor.sh"
+- import_tasks: i3.yml
+- import_tasks: fonts.yml
+- import_tasks: music.yml
 
 - name: Install documentation generation tools pandoc and latex
   kewlfft.aur.aur:
@@ -49,18 +15,3 @@
       - neovim
       - emacs
     state: present
-
-- name: Music
-  kewlfft.aur.aur:
-    name:
-      - pavucontrol
-      - pulsemixer
-      - playerctl
-      - mpd
-      # terminal interface for mpd
-      - mpc
-      - mpv
-      - ncmpcpp
-    state: present
-
-- import_tasks: fonts.yml
