Make use of fqcn's

--- a/roles/base/tasks/gpsd.yml
+++ b/roles/base/tasks/gpsd.yml
@@ -12,7 +12,7 @@
     state: present
 
 - name: Enable gpsd service
-  systemd:
+  ansible.buildin.systemd:
     enabled: yes
     state: started
     name: gpsd
