--- a/roles/base/tasks/users.yml
+++ b/roles/base/tasks/users.yml
@@ -1,10 +1,11 @@
 - name: User Pia
-  user:
+  ansible.buildin.user:
     name: pia
-    append: yes
+    groups: pia
+    append: true
 
 - name: Emergency user
-  user:
+  ansible.buildin.user:
     name: bro
     groups: wheel
-    append: yes
+    append: true
