--- a/roles/desktop/tasks/main.yml
+++ b/roles/desktop/tasks/main.yml
@@ -2,6 +2,7 @@
 - import_tasks: i3.yml
 - import_tasks: fonts.yml
 - import_tasks: music.yml
+- import_tasks: video.yml
 - import_tasks: doctools.yml
 
 - name: Install vim and emacs
