--- a/roles/base/tasks/entropy.yml
+++ b/roles/base/tasks/entropy.yml
@@ -1,14 +1,12 @@
 ---
 - name: Install entropy service
-  become: yes
-  pacman:
+  community.general.pacman:
     name:
       - rng-tools
       - opensc
 
 - name: Enable entropy service
-  become: yes
-  systemd:
-    enabled: yes
+  ansible.buildin.systemd:
+    enabled: true
     state: started
     name: rngd
