Fix builtin spelling ;-|

--- a/roles/base/tasks/entropy.yml
+++ b/roles/base/tasks/entropy.yml
@@ -6,7 +6,7 @@
       - opensc
 
 - name: Enable entropy service
-  ansible.buildin.systemd:
+  ansible.builtin.systemd:
     enabled: true
     state: started
     name: rngd
