--- a/roles/base/tasks/reflector.yml
+++ b/roles/base/tasks/reflector.yml
@@ -4,13 +4,13 @@
       - reflector
 
 - name: make sure /etc/pacman.d/hooks/ exist
-  ansible.buildin.file:
+  ansible.builtin.file:
     path: /etc/pacman.d/hooks/
     state: directory
     mode: '0755'
 
 - name: pacman hook that will run reflector and remove the .pacnew file created every time pacman-mirrorlist gets an upgrade
-  ansible.buildin.copy:
+  ansible.builtin.copy:
     dest: /etc/pacman.d/hooks/mirrorupgrade.hook
     content: |
       [Trigger]
