--- a/roles/desktop/tasks/i3.yml
+++ b/roles/desktop/tasks/i3.yml
@@ -31,7 +31,7 @@
       - xsel
 
 - name: Automatic monitor activation on laptop docking and the like
-  ansible.buildin.copy:
+  ansible.builtin.copy:
     dest: "/etc/udev/rules.d/carbs-screens.conf"
     content: |
       KERNEL=="card0", ACTION=="change", SUBSYSTEM=="drm", ENV{DISPLAY}=":0", ENV{XAUTHORITY}="/home/{{carbs_user}}/.Xauthority", RUN+="/home/{{carbs_user}}/.local/bin/hotplug_monitor.sh"
