--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -9,3 +9,5 @@
 - import_tasks: usb.yml
 - import_tasks: gpsd.yml
 - import_tasks: ntp.yml
+- import_tasks: timeshift.yml
+- import_tasks: ranger.yml
