--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10"
 ansible = ">=6.5.0"
 pre-commit = ">=2.20.0"
 ansible-lint = ">=6.8.2"
+neovim = "^0.3.1"
 
 [build-system]
 requires = ["poetry-core"]
