--- a/roles/base/tasks/users.yml
+++ b/roles/base/tasks/users.yml
@@ -1,17 +1,22 @@
-- name: Ensure group "pia" exists
-  ansible.builtin.group:
-    name: pia
-
-- name: User Pia
+---
+- name: Ensure users are present with zsh shell and home directories
   ansible.builtin.user:
-    name: pia
+    name: "{{ item.name }}"
+    state: present
+    shell: /usr/bin/zsh
+    create_home: yes
+    groups: "{{ item.groups | default(omit) }}"
+  loop:
+    - name: thys
+      groups: wheel
+    - name: bro
+      groups: wheel
+    - name: pia
 
-- name: Ensure group "bro" exists
-  ansible.builtin.group:
-    name: bro
-
-- name: Emergency user
-  ansible.builtin.user:
-    name: bro
-    groups: wheel
-    append: true
+- name: Ensure sudoers file allows 'wheel' group members to have passwordless sudo
+  ansible.builtin.lineinfile:
+    path: /etc/sudoers
+    state: present
+    regexp: '^%wheel'
+    line: '%wheel ALL=(ALL) NOPASSWD: ALL'
+    validate: 'visudo -cf %s'
